changement couleur fond et icones

--- a/src/naviguation/Sidenav.css
+++ b/src/naviguation/Sidenav.css
@@ -20,7 +20,7 @@ margin: 25px;
     display:flex;
     flex-direction: row;
     align-items: center;
-    color: white;
+    color: black;
     background: 0;
     border: 0;
     margin: 5px 10px 5px 10px;
